--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="paginaa.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="menu.html">Menú</a></li>
         
       </ul>
