--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="paginaa.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="menu.html">Menú</a></li>
   
       </ul>
@@ -21,37 +21,37 @@
     <h1>Menú</h1>
     <ul>
       <li>
-        <img src="quinoa.jpeg" alt="Plato 1">
+        <img src="img/quinoa.jpeg" alt="Plato 1">
         <h3>Ensalada de Quinoa</h3>
         <p>Una mezcla fresca de quinoa, verduras y aderezo ligero.</p>
         <span class="price">7000₡ </span>
       </li>
       <li>
-        <img src="bowl salmon.jpeg" alt="Plato 2">
+        <img src="img/bowl salmon.jpeg" alt="Plato 2">
         <h3>Bowl de Salmón</h3>
         <p>Salmón a la parrilla con arroz integral y vegetales.</p>
         <span class="price">10000₡ </span>
       </li>
       <li>
-        <img src="Tacos camote.jpg" alt="Plato 3">
+        <img src="img/Tacos camote.jpeg" alt="Plato 3">
         <h3>Tacos de Camote</h3>
         <p>Tacos a la parrila con un delicioso camote</p>
         <span class="price">1500₡ c/u</span>
       </li>
       <li>
-        <img src="burguer.jpeg" alt="Plato 4">
+        <img src="img/burguer.jpeg" alt="Plato 4">
         <h3>Burger Vegana</h3>
         <p>Deliciosa hamburguesa vegana con una variedad de ingredientes frescos.</p>
         <span class="price">2200₡</span>
      </li>
       <li>
-        <img src="poke.jpeg" alt="Plato 5">
+        <img src="img/poke.jpeg" alt="Plato 5">
         <h3>Poke Bowl de Salmón</h3>
         <p>Poke bowl con salmón fresco, arroz, vegetales y salsa de soja.</p>
         <span class="price">8000₡   </span>
       </li>
       <li>
-        <img src="tarta-de-espinacas.jpg" alt="Plato 6">
+        <img src="img/tarta-de-espinacas.jpeg" alt="Plato 6">
         <h3>Tarta de Espinacas</h3>
         <p>Tarta salada de espinacas con masa casera y queso ricota.</p>
         <span class="price">4000₡</span>
