--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
   <section class="hero">
-    <h1>Comida Saludable a tu Pueaarta</h1>
+    <h1>Comida Saludable a tu Puearta</h1>
     <p>Disfruta de deliciosas opciones de comida saludable entregadas directamente en tu hogar.</p>
     <section class="about">
       <h2>Sobre Nosotros</h2>
